--- a/HMIN309_TP3/Resources/layout/fragment_event_creation.axml
+++ b/HMIN309_TP3/Resources/layout/fragment_event_creation.axml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -39,17 +39,14 @@
                 android:layout_gravity="end"
                 android:visibility="invisible"/>
         </LinearLayout>
-
-
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="50dp"
         android:orientation="vertical"
         android:gravity="start">
@@ -72,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="50dp"
         android:orientation="vertical"
         android:gravity="start">
@@ -97,7 +94,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="50dp"
         android:orientation="vertical"
         android:gravity="start">
@@ -123,7 +120,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="450dp"
+        android:layout_marginTop="20dp"
         android:orientation="vertical"
         android:gravity="center">
 
