--- a/HMIN309_TP3/Resources/layout/fragment_event_creation.axml
+++ b/HMIN309_TP3/Resources/layout/fragment_event_creation.axml
@@ -58,7 +58,7 @@
             android:textSize="22dp"
             android:textColor="@color/colorAccent"/>
 
-        <Button
+        <DatePicker
             android:id="@+id/eventCreationDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
