--- a/HMIN309_TP3/Resources/layout/fragment_event_creation.axml
+++ b/HMIN309_TP3/Resources/layout/fragment_event_creation.axml
@@ -22,7 +22,9 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal""
+			android:focusable="false"
+		    android:focusableInTouchMode="true">
 
             <EditText
                 android:id="@+id/eventCreationName"
@@ -58,10 +60,10 @@
             android:textSize="22dp"
             android:textColor="@color/colorAccent"/>
 
-        <DatePicker
-            android:id="@+id/eventCreationDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+		<Button
+			android:id="@+id/eventCreationDate"
+			android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
