--- a/HMIN309_TP3/HMIN309_TP3/Views/ItemDetailPage.xaml
+++ b/HMIN309_TP3/HMIN309_TP3/Views/ItemDetailPage.xaml
@@ -4,9 +4,13 @@
              x:Class="HMIN309_TP3.Views.ItemDetailPage"
              Title="{Binding Title}">
     <StackLayout Spacing="20" Padding="15">
-        <Label Text="Text:" FontSize="Medium" />
-        <Label Text="{Binding Item.Text}" FontSize="Small"/>
-        <Label Text="Description:" FontSize="Medium" />
+        <Label Text="Name" FontSize="Medium" />
+        <Label Text="{Binding Item.Name}" FontSize="Small"/>
+        <Label Text="Dat:" FontSize="Medium" />
+        <Label Text="{Binding Item.DateText}" FontSize="Small"/>
+        <Label Text="Type" FontSize="Medium" />
+        <Label Text="{Binding Item.Type}" FontSize="Small"/>
+        <Label Text="Description" FontSize="Medium" />
         <Label Text="{Binding Item.Description}" FontSize="Small"/>
     </StackLayout>
 </ContentPage>
