--- a/HMIN309_TP3/HMIN309_TP3/Views/CreationPage.xaml
+++ b/HMIN309_TP3/HMIN309_TP3/Views/CreationPage.xaml
@@ -7,6 +7,7 @@
         <ToolbarItem Text="Save" Clicked="Save_Clicked" />
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
+        <ScrollView>
         <StackLayout Spacing="20" Padding="15">
             <Label Text="Name" FontSize="Medium" />
             <Entry
@@ -40,6 +41,10 @@
                 FontSize="Small"
                 Margin="0"
             />
-        </StackLayout>
+
+            <Image x:Name="PhotoImage" />
+            <Button x:Name="CameraButton" Text="Take Photo"/>
+            </StackLayout>
+            </ScrollView>
     </ContentPage.Content>
 </ContentPage>
