Fix picture and dev map

--- a/HMIN309_TP3/HMIN309_TP3/Views/CreationPage.xaml
+++ b/HMIN309_TP3/HMIN309_TP3/Views/CreationPage.xaml
@@ -42,7 +42,12 @@
                 Margin="0"
             />
 
-            <Image x:Name="PhotoImage" />
+                <Button
+                    Text="Geolocation"
+                    Clicked="Click_Geolocation"
+                />
+
+                <Image x:Name="PhotoImage" />
             <Button x:Name="CameraButton" Text="Take Photo"/>
             </StackLayout>
             </ScrollView>
