--- a/HMIN309_TP3/HMIN309_TP3/Views/MapPage.xaml
+++ b/HMIN309_TP3/HMIN309_TP3/Views/MapPage.xaml
@@ -9,7 +9,7 @@
             Orientation="Vertical">
             <SearchBar
                 x:Name="SearchBar"
-                Unfocused="SearchBar_OnTextChanged"/>
+                Unfocused="SearchBar_Unfocused"/>
             <googlemaps:Map x:Name="map"/>
         </StackLayout>
     </ContentPage.Content>
